# python-fofa-sy

./: .gitignore  .python-version  LICENSE  README.md  babel.cfg  main.py  pyproject.toml  requirements-tree.txt
locales/: fofa_py_src.pot
locales/zh_CN/LC_MESSAGES/: messages.mo  messages.po
src/: __init__.py  factory.py
src/basic/: __init__.py  etc.py  exceptions.py
src/fofa_py/: factory.py
src/fofa_py/basic/: __init__.py  etc.py  exceptions.py
src/fofa_py/util/: __init__.py  query.py
src/util/: __init__.py  core.py  etc.py  query.py
tests/: test_core.py
